--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "https://github.com/htmlacademy-javascript/155960-code-and-magick-20/issues"
   },
   "devDependencies": {
-    "eslint": "7.1.0",
-    "eslint-config-htmlacademy": "0.5.2"
+    "eslint": "^7.1.0",
+    "eslint-config-htmlacademy": "^0.5.2"
   },
   "license": "MIT",
   "dependencies": {},
